# SPDX-FileCopyrightText: 2025 Madeline Baggins <declanbaggins@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "maddi-xml"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A library for parsing xml config files for cli tools"
repository = "https://github.com/MadelineBaggins/maddi-xml"
readme = "README.md"
keywords = [ "xml", "config", "parser", "cli", "parser" ]

[dependencies]
